[package]
name = "cargo-day"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
description = "☀️ daily touch command"
repository = "https://github.com/joseburgosguntin/cargo-day"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4"
clap = { version = "4.5.0", features = ["derive"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
color-print = "0.3.5"
